tests/rosetta/transpiler/FS/accumulator-factory.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Accumulator-factory' based on the file name 'accumulator-factory.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(14,44): error FS0001: The type 'obj' does not support the operator '+'

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(15,26): error FS0001: This expression was expected to have type
    unit    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(30,9): warning FS0193: This expression is a function value, i.e. is missing arguments. Its type is 'a -> unit.

/workspace/mochi/tests/rosetta/transpiler/FS/accumulator-factory.fs(31,33): error FS0001: This expression was expected to have type
    int    
but here has type
    float    
